<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.treeh</groupId>
    <artifactId>ToNX</artifactId>
    <version>1.5</version>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <arg>--add-exports</arg><arg>java.base/sun.security=ToNX</arg>
                        <arg>--add-exports</arg><arg>java.base/jdk.internal.util.jar=ToNX</arg>
                        <arg>--add-exports</arg><arg>java.base/jdk.internal.misc=ToNX</arg>
                        <arg>--add-exports</arg><arg>java.base/jdk.internal.perf=ToNX</arg>
                        <arg>--add-exports</arg><arg>java.base/jdk.internal.loader=ToNX</arg>
                        <arg>--add-exports</arg><arg>java.base/sun.net.www=ToNX</arg>
                        <arg>--add-exports</arg><arg>java.base/sun.net.www.protocol.jar=ToNX</arg>
                        <arg>--add-exports</arg><arg>java.base/sun.net.www.protocol.file=ToNX</arg>
                        <arg>--add-exports</arg><arg>java.base/sun.net.util=ToNX</arg>
                        <arg>--add-exports</arg><arg>java.base/sun.security.action=ToNX</arg>
                        <arg>--add-exports</arg><arg>java.base/sun.security.util=ToNX</arg>
                        <arg>--add-exports</arg><arg>java.base/sun.nio=ToNX</arg>
                        <arg>--add-exports</arg><arg>java.base/sun.nio.cs=ToNX</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.36</version>
        </dependency>

        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.5.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>31.1-jre</version>
        </dependency>

    </dependencies>

</project>